# benchmarking_poc

./: .gitignore
catch2/: README.md
catch2/canary/: CMakeLists.txt  build.sh  canary.cpp  run.sh
google_benchmark/canary/: CMakeLists.txt  README.md  build.sh  canary.cpp  configure.sh  run.sh
google_benchmark/workload_find/: CMakeLists.txt  RESULTS_macos.md  RESULTS_ubuntu1804-large.md  build.sh  configure.sh  googlebenchmark_to_perfsend.py  run.sh  workload_find.cpp
